Fix spacing and selection text

--- a/packages/block-library/fieldset/style.scss
+++ b/packages/block-library/fieldset/style.scss
@@ -5,7 +5,8 @@
 	@include defaults;
 	@include field-label;
 
-	margin: 0;
+	margin-left: 0;
+	margin-right: 0;
 	padding: 0;
 	border-width: 0;
 
